[gd_scene load_steps=3 format=3 uid="uid://c1gbh7rsrwfms"]

[ext_resource type="PackedScene" uid="uid://l1ilgi5yqq1d" path="res://components/upgrades/upgrade_buttons/sword_buttons/base_sword_button/base_sword_button.tscn" id="1_qu6vv"]
[ext_resource type="Script" path="res://components/upgrades/upgrade_buttons/sword_buttons/sword_speed/sword_speed.gd" id="2_ka3wy"]

[node name="sword_speed" instance=ExtResource("1_qu6vv")]
text = "|Sword|
Increase
Speed
"
script = ExtResource("2_ka3wy")

[node name="level_1" type="CheckBox" parent="." index="0"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -24.0
grow_vertical = 0
mouse_filter = 2

[node name="level_2" type="CheckBox" parent="." index="1"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -43.0
offset_bottom = -19.0
grow_vertical = 0
mouse_filter = 2

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
